[gd_scene load_steps=4 format=3 uid="uid://26oitib3u2kg"]

[ext_resource type="Script" uid="uid://cug6kji0i1qou" path="res://Menu/keybinding setting/keybind.gd" id="1_16tly"]
[ext_resource type="PackedScene" uid="uid://juvgsr12o5xe" path="res://Menu/keybinding setting/input_button_settings.tscn" id="1_y5ne7"]
[ext_resource type="PackedScene" uid="uid://cr4gv3ffev13p" path="res://Menu/keybinding setting/sound_track.tscn" id="3_xq3bc"]

[node name="Keybind" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 4
script = ExtResource("1_16tly")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -352.0
offset_top = -232.0
offset_right = 352.0
offset_bottom = 232.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="ScrollContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_direction = 1
layout_mode = 2
size_flags_vertical = 0

[node name="ActionList" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="inputbutton" parent="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/ActionList" instance=ExtResource("1_y5ne7")]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Master Volume"

[node name="SoundTrack_master" parent="PanelContainer/MarginContainer/VBoxContainer" instance=ExtResource("3_xq3bc")]
layout_mode = 2
bus_name = "Master"

[node name="Label2" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Music Volume"

[node name="SoundTrack2_music" parent="PanelContainer/MarginContainer/VBoxContainer" instance=ExtResource("3_xq3bc")]
layout_mode = 2
bus_name = "Music"

[node name="Label3" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "SFX Volume"

[node name="SoundTrack3_effect" parent="PanelContainer/MarginContainer/VBoxContainer" instance=ExtResource("3_xq3bc")]
layout_mode = 2
bus_name = "SFX"
